# TestPlugin

./: .gitignore  CMakeLists.txt
data/PluginCreate/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.h  TestPlugin.json
include/Base/PluginBase/: PluginBase.h  PluginBase_global.h
include/MainWindow/: PluginWidget.h  PluginsManage.h  Struct.hpp
include/Plugins/comment/: PluginsMsg.hpp  PluginsName.hpp
include/Tools/PluginCreate/: PluginCreate.h  PluginCreate_global.h
include/Tools/SystemConfig/: SystemConfig.h  SystemConfig_global.h
include/Tools/ToolsLib/: ToolsLib.h  ToolsLib_global.h
src/: CMakeLists.txt
src/Base/: CMakeLists.txt
src/Base/PluginBase/: CMakeLists.txt  PluginBase.cpp
src/MainWindow/: CMakeLists.txt  PluginWidget.cpp  PluginWidget.ui  PluginsManage.cpp  PluginsManage.ui  main.cpp
src/Plugins/: CMakeLists.txt
src/Plugins/SettingPlugin/: CMakeLists.txt  SettingDialog.cpp  SettingDialog.h  SettingDialog.ui  SettingPlugin.cpp  SettingPlugin.h  SettingPlugin.json
src/Plugins/Test/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.h
src/Tools/: CMakeLists.txt
src/Tools/PluginCreate/: CMakeLists.txt  PluginCreate.cpp  PluginCreate.ui
src/Tools/SystemConfig/: CMakeLists.txt  SystemConfig.cpp
src/Tools/ToolsLib/: CMakeLists.txt  ToolsLib.cpp
src/test/: CMakeLists.txt
src/test/TestLonLat/: CMakeLists.txt  test_land_sea.cpp
